// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Palette /> should render the pallette correctly 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(4,1fr);
  gap: 0.5rem;
  width: 100%;
  max-width: 800px;
}

.c1 {
  height: 130px;
  border-radius: 8px;
  background: #095525;
}

.c2 {
  height: 130px;
  border-radius: 8px;
  background: #673636;
}

.c3 {
  height: 130px;
  border-radius: 8px;
  background: #379273;
}

.c4 {
  height: 130px;
  border-radius: 8px;
  background: #136407;
}

.c5 {
  height: 130px;
  border-radius: 8px;
  background: #573227;
}

.c6 {
  height: 130px;
  border-radius: 8px;
  background: #547820;
}

.c7 {
  height: 130px;
  border-radius: 8px;
  background: #163598;
}

.c8 {
  height: 130px;
  border-radius: 8px;
  background: #682052;
}

<div
  class="c0"
  title="Palette"
>
  <div
    class="c1"
    color="#095525"
    title="Color"
  />
  <div
    class="c2"
    color="#673636"
    title="Color"
  />
  <div
    class="c3"
    color="#379273"
    title="Color"
  />
  <div
    class="c4"
    color="#136407"
    title="Color"
  />
  <div
    class="c5"
    color="#573227"
    title="Color"
  />
  <div
    class="c6"
    color="#547820"
    title="Color"
  />
  <div
    class="c7"
    color="#163598"
    title="Color"
  />
  <div
    class="c8"
    color="#682052"
    title="Color"
  />
</div>
`;

exports[`<Preview /> should render the component correctly 1`] = `
.c5 {
  display: grid;
  grid-template-columns: repeat(4,1fr);
  gap: 0.5rem;
  width: 100%;
  max-width: 800px;
}

.c6 {
  height: 130px;
  border-radius: 8px;
  background: #095525;
}

.c7 {
  height: 130px;
  border-radius: 8px;
  background: #673636;
}

.c8 {
  height: 130px;
  border-radius: 8px;
  background: #379273;
}

.c9 {
  height: 130px;
  border-radius: 8px;
  background: #136407;
}

.c10 {
  height: 130px;
  border-radius: 8px;
  background: #573227;
}

.c11 {
  height: 130px;
  border-radius: 8px;
  background: #547820;
}

.c12 {
  height: 130px;
  border-radius: 8px;
  background: #163598;
}

.c13 {
  height: 130px;
  border-radius: 8px;
  background: #682052;
}

.c0 {
  width: 100%;
  max-width: 800px;
  gap: 2rem;
  margin: 0 auto;
}

.c4 {
  border: 4px solid #363636;
  border-radius: 4px;
  margin-bottom: 2rem;
  padding: 0;
}

.c4 span {
  border-radius: 4px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 2rem;
  gap: 1rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  width: 100%;
  height: 82px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 16px 20px;
  background: #5A5A5A;
  font-size: 36px;
  border: none;
  border-radius: 8px;
  color: #202020;
  font-weight: bold;
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c2:hover {
  background-color: #dddddd;
}

.c2:active {
  -webkit-transform: translateX(0rem) translateY(0.125rem);
  -ms-transform: translateX(0rem) translateY(0.125rem);
  transform: translateX(0rem) translateY(0.125rem);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  width: 100%;
  height: 82px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 16px 20px;
  background: #202020;
  font-size: 36px;
  border: none;
  border-radius: 8px;
  color: #5A5A5A;
  font-weight: bold;
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c3:hover {
  background-color: #dddddd;
}

.c3:active {
  -webkit-transform: translateX(0rem) translateY(0.125rem);
  -ms-transform: translateX(0rem) translateY(0.125rem);
  transform: translateX(0rem) translateY(0.125rem);
}

<div
  class="c0"
  title="Preview"
>
  <div
    class="c1"
  >
    <button
      class="c2"
      role="button"
    >
      Refresh
    </button>
    <button
      class="c3"
      role="button"
    >
      Save
    </button>
  </div>
  <div
    class="c4"
  >
    <span
      style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative;"
    >
      <span
        style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 100% 0px 0px 0px;"
      />
      <img
        alt="album art"
        data-nimg="responsive"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
      />
      <noscript />
    </span>
  </div>
  <div
    class="c5"
    title="Palette"
  >
    <div
      class="c6"
      color="#095525"
      title="Color"
    />
    <div
      class="c7"
      color="#673636"
      title="Color"
    />
    <div
      class="c8"
      color="#379273"
      title="Color"
    />
    <div
      class="c9"
      color="#136407"
      title="Color"
    />
    <div
      class="c10"
      color="#573227"
      title="Color"
    />
    <div
      class="c11"
      color="#547820"
      title="Color"
    />
    <div
      class="c12"
      color="#163598"
      title="Color"
    />
    <div
      class="c13"
      color="#682052"
      title="Color"
    />
  </div>
</div>
`;
